--- a/demo5/sass/components/_posts-section.scss
+++ b/demo5/sass/components/_posts-section.scss
@@ -11,6 +11,11 @@ section#posts {
     background-color: $black;
     padding: 4rem;
 
+    .news-list {
+      display: flex;
+      flex-direction: column;
+    }
+
     .news-item {
       margin: 2rem 0;
       .img-wrapper {
